shorten url service and handler
